    (Wei Yan via vvasudev)

    YARN-4384. updateNodeResource CLI should not accept negative values for resource.
    (Junping Du via wangda)

    YARN-3766. Fixed the apps table column error of generic history web UI.
    (Xuan Gong via zjshen)

    YARN-4392. ApplicationCreatedEvent event time resets after RM restart/failover.
    (Naganarasimha G R and Xuan Gong via xgong)

Release 2.7.3 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

    YARN-4623. TestSystemMetricsPublisher#testPublishAppAttemptMetricsForUnmanagedAM
    fails with NPE on branch-2.7. (Naganarasimha G R via junping_du)

    YARN-4344. NMs reconnecting with changed capabilities can lead to wrong
    cluster resource calculations (Varun Vasudev via jlowe)

    YARN-3840. Resource Manager web ui issue when sorting application by id
    (with application having id > 9999) (Mohammad Shahid Khan & Varun Saxena)

    YARN-4398. Remove unnecessary synchronization in RMStateStore. (Ning Ding via jianhe)

    YARN-4348. ZKRMStateStore.syncInternal shouldn't wait for sync completion
    for avoiding blocking ZK's event thread. (ozawa)

    YARN-4424. Fix deadlock in RMAppImpl. (jianhe via wtan)
    
    YARN-4546. ResourceManager crash due to scheduling opportunity overflow.
    (Jason Lowe via junping_du)

    YARN-4598. Invalid event: RESOURCE_FAILED at
    CONTAINER_CLEANEDUP_AFTER_KILL (tangshangwen via jlowe)

    YARN-2046. Out of band heartbeats are sent only on container kill and
    possibly too early (Ming Ma via jlowe)

    YARN-3695. ServerProxy (NMProxy, etc.) shouldn't retry forever for non
    network exception. (Raju Bairishetti via jianhe)

    YARN-4414. Nodemanager connection errors are retried at multiple levels
    (Chang Li via jlowe)

    YARN-4422. Generic AHS sometimes doesn't show started, node, or logs on App page
    (Eric Payne via jeagles)

    YARN-4785. inconsistent value type of the "type" field for LeafQueueInfo 